--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {"DefaultConnection":"Data Source=datingApp.db"}
+  "ConnectionStrings": {"DefaultConnection":"Data Source=datingApp.db"},
+  "TokenKey":"Highly securable uncrackable key"
 }
